fix: resolve conflicts and add dark mode to update Dashboard

--- a/frontend/src/styles/Theme.css
+++ b/frontend/src/styles/Theme.css
@@ -12,6 +12,7 @@
     --foreground: #000;
     --accents-primary: #FFF;
     --share-popup: white;
+    --d-bg: white
 }
 
 .dark {
@@ -28,6 +29,7 @@
     --share-popup: #2B2A30;
     --share-load: #D5F7FE;
     --accents-primary: #2B2A30;
+    --d-bg: #2B2A30;
     color: var(--foreground);
     color-scheme: dark;
     transition: all .5s linear;
